--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -9,6 +9,11 @@ requirements = []
 path = 'contracts/abstract-idea-tokenization.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.conceptual-value-assessment]
+path = 'contracts/conceptual-value-assessment.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
