--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -14,6 +14,11 @@ epoch = 2.5
 path = 'contracts/conceptual-value-assessment.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.memetic-propagation-tracking]
+path = 'contracts/memetic-propagation-tracking.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
